--- a/application/src/main/webapp/css/layout.less
+++ b/application/src/main/webapp/css/layout.less
@@ -15,7 +15,7 @@
   .flex-column;
 }
 .uiGlobalRoomsContainer, .uiRightContainerArea {
-  flex: 1;
+  .flex-remaining-width;
 }
 .uiLeftContainerArea, .room-participants {
   width: @sideBarWidth;
