--- a/application/src/main/webapp/css/mixins.less
+++ b/application/src/main/webapp/css/mixins.less
@@ -29,6 +29,10 @@
   display: flex;
   align-items: center;
 }
+.flex-remaining-width {
+  flex: 1;
+  min-width: 0;
+}
 
 .overflow-wrap {
   word-wrap: break-word;
